--- a/swift-Imitation/Info.plist
+++ b/swift-Imitation/Info.plist
@@ -32,5 +32,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>征用你的相册</string>
 </dict>
 </plist>
