--- a/swift-Imitation/Info.plist
+++ b/swift-Imitation/Info.plist
@@ -32,6 +32,11 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>征用你的相册</string>
 </dict>
